--- a/client/src/css/components/_enlarge.scss
+++ b/client/src/css/components/_enlarge.scss
@@ -11,7 +11,7 @@
     position: absolute;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 30px 1fr 89px;
+    grid-template-rows: 30px 1fr min-content;
     border-left: 1px solid black;
     overflow: hidden;
     z-index: 99;
@@ -56,10 +56,8 @@
 }
 .viewControls{
     width: 100%;
-    position: absolute;
     bottom: 100%;
     right: 0;
-    border-top: 1px solid black;
     border-bottom: 1px solid black;
     background-color: white;
     height: 30px;
