--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -344,12 +344,8 @@ font-family: 'Times New Roman', Times, serif;
     z-index: 1;
     position: absolute;
     height: 100%;
-    // width: 100%;
     max-height: 100%;
 }
-// .foreground-transition{
-//     transition: height 0.2s, width 0.2s, opacity 0.4s;
-// }
 
 .imageSelect-FilePreview{
     object-fit: contain;
@@ -936,6 +932,7 @@ font-family: 'Times New Roman', Times, serif;
     display: initial;
     height: 100%;
     overflow: hidden;
+    padding: 0 3vw 0 3vw;
 }
 //MEDIA QUERY MOBILE *************************************************************************************************************
 @media only screen and (max-width: 720px) {
@@ -1144,9 +1141,6 @@ font-family: 'Times New Roman', Times, serif;
     }
     .info-up{
         display: initial;
-        // border-left: none;
-        // border-top: 1px solid;
-        // transform: translateY(-100%) !important;
         height: 100%;
         overflow: hidden;
         padding: 0 3vw 0 3vw;
@@ -1291,4 +1285,4 @@ font-family: 'Times New Roman', Times, serif;
   @import './components/viewhide';
   @import './components/switch';
 
-//   *{transition: 0s all !important;}
+*{transition: 0s all !important;}
