--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -819,7 +819,15 @@ label {
   height: 100%;
   opacity: 1;
   max-height: 100%;
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #background {
