--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -336,7 +336,9 @@ font-family: 'Times New Roman', Times, serif;
     height: 100%;
     opacity: 1;
     max-height: 100%;
-    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #background{
     display: flex;
