--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -530,6 +530,10 @@
   color: black;
 }
 
+.admin-content textarea, .admin-content input {
+  border: 1px solid blue;
+}
+
 html, body, #root, .app-container, .admin-container {
   height: 100%;
   width: 100%;
@@ -631,6 +635,7 @@ form {
   -ms-grid-rows: min-content 1fr;
       grid-template-rows: -webkit-min-content 1fr;
       grid-template-rows: min-content 1fr;
+  height: 100%;
 }
 
 .tab-pane {
@@ -675,6 +680,7 @@ label {
 
 .FileInfo-container {
   width: 100%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1108,6 +1114,7 @@ textarea {
       -ms-flex-pack: center;
           justify-content: center;
   background-color: black;
+  height: 30px;
 }
 
 .FamilyList--familyName__text {
@@ -1126,9 +1133,8 @@ textarea {
   overflow: auto;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: (min-content)[auto-fill];
-      grid-template-rows: repeat(auto-fill, -webkit-min-content);
-      grid-template-rows: repeat(auto-fill, min-content);
+  -ms-grid-rows: (30px 1fr)[auto-fill];
+      grid-template-rows: repeat(auto-fill, 30px 1fr);
 }
 
 .FamilyList--detail {
@@ -1664,6 +1670,10 @@ h5 {
   .admin-nav {
     display: block;
   }
+  .admin-nav-list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
   .admin-nav-list li {
     -webkit-box-flex: 1;
         -ms-flex: 1;
@@ -1747,6 +1757,39 @@ h5 {
   .hide-imageSelect {
     -webkit-transform: translateY(100%);
             transform: translateY(100%);
+  }
+  .btn, .nav-link {
+    padding: 2px !important;
+  }
+  .SingleFile-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .SingleFile-container .FileInfo-preview {
+    width: 100%;
+  }
+  .grid-wrapper {
+    -ms-grid-columns: (minmax(100px, 49%))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(100px, 49%));
+    grid-gap: 4px;
+    width: unset;
+  }
+  .grid-wrapper .imageBox__wrapper {
+    width: unset;
+    margin: 0;
+    padding: 0;
+  }
+  .list-group, .tab-content {
+    margin: 0;
+    padding: 0;
+  }
+  .Tabs-container {
+    border-top: 2px solid black;
+  }
+  .list-group-category {
+    max-width: 49%;
   }
 }
 /*# sourceMappingURL=main.css.map */
