--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -28,6 +28,11 @@ $border-main-color: #bbb;
     white-space: normal;
     color: black;
 }
+.admin-content{
+    textarea, input{
+        border: 1px solid blue;
+    }
+}
 
 html, body, #root, .app-container, .admin-container{
     height: 100%;
@@ -101,7 +106,7 @@ form{
 .Tabs-container{
     display: grid;
     grid-template-rows: min-content 1fr;
-    // height: 100%;
+    height: 100%;
 }
 .tab-pane{
     padding-top: 3px;
@@ -110,9 +115,6 @@ form{
 .card-header-tabs{
     margin-top: 10px;
 }
-// .nav{
-//     height: 45px;
-// }
 .nav-link{
     background-color: rgb(228, 228, 228);
     margin-right: 3px;
@@ -144,6 +146,7 @@ label{
 //___________________________________________________________________
 .FileInfo-container{
     width: 100%;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -439,6 +442,7 @@ textarea{
     display: flex;
     justify-content: center;
     background-color: black;
+    height: 30px;
 }
 .FamilyList--familyName__text{
     color: white;
@@ -454,7 +458,8 @@ textarea{
     width: auto !important;
     overflow: auto;
     display: grid;
-    grid-template-rows: repeat(auto-fill, min-content);
+    grid-template-rows: repeat(auto-fill, 30px 1fr);
+
 }
 .FamilyList--detail{
     display: flex;
@@ -827,6 +832,7 @@ font-family: 'Times New Roman', Times, serif;
         display:block;
     }
     .admin-nav-list{
+        flex-wrap: nowrap;
         li{
             flex: 1;
             button{
@@ -895,21 +901,39 @@ font-family: 'Times New Roman', Times, serif;
         display: none;
     }
     .ImagesPreview--imageContainer{
-        // width: 50%;
         min-height: 90px;
         flex: 1 1 50%;
-        // border: 1px solid red;
     }
-    // .info-up{
-    //     opacity: 1;
-    //     transform: translateY(0);
-    //     border-top: 1px solid black;
-    // }
-    // .show{
-    //     display: flex;
-    // }
     .hide-imageSelect{
         transform: translateY(100%)
     }
-    
+    .btn, .nav-link{
+        padding: 2px !important;
+    }
+    .SingleFile-container{
+        flex-direction: column;
+        .FileInfo-preview{
+            width: 100%;
+        }
+    }
+    .grid-wrapper{
+        grid-template-columns: repeat(auto-fill, minmax(100px, 49%));
+        grid-gap: 4px;
+        width: unset;
+        .imageBox__wrapper{
+            width: unset;
+            margin: 0; 
+            padding: 0;
+        }
+    }
+    .list-group, .tab-content{
+        margin: 0;
+        padding: 0;
+    }
+    .Tabs-container{
+        border-top: 2px solid black;
+    }
+    .list-group-category{
+        max-width: 49%;
+    }
   }
