--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -22,6 +22,12 @@ $border-main:  4px solid white;
 $border-gutter: none;
 $border-main-color: #bbb;
 
+@mixin common-border {
+    border: 2px solid #b5b5b5;
+    padding: 3px;
+    border-radius: 6px;
+}
+
 *{
     margin:0;
     padding: 0;
@@ -30,8 +36,18 @@ $border-main-color: #bbb;
 }
 .admin-content{
     textarea, input{
-        border: 1px solid blue;
+        @include common-border()
     }
+}
+.fileUploadMessage{
+    font-size: 14px;
+}
+.fail{
+    color: red;
+}
+.success{
+    color: #28a745;
+    font-weight: bold;
 }
 
 html, body, #root, .app-container, .admin-container{
@@ -124,7 +140,8 @@ form{
     border-top: 0;
     border-bottom: 0;
     padding: 0 5px;
-    overflow-y: hidden;
+    overflow: auto;
+    // overflow-y: hidden;
     // .active{
     //     display: grid;
     //     grid-template-rows: min-content 1fr;
@@ -140,8 +157,6 @@ label{
 .FileUpload-container{
     height: 100%;
     overflow-y: auto;
-    display: grid;
-    grid-template-rows: min-content 1fr;
 }
 //___________________________________________________________________
 .FileInfo-container{
@@ -157,15 +172,14 @@ label{
 .SingleFile-container{
     height: initial;
     width: initial;
-    // margin: 10px;
-    border: 1px solid;
     border-left: 0;
     border-right: 0;
-    padding: 5px;
-    margin-bottom: 10px;
+    border-bottom: 5px solid black;
+}
+.SingleFile-container:last-of-type{
+    border-bottom: 0;
 }
 .FileInfo-preview{
-    border-right: 1px solid #dee2e6;
     margin-right: 3px;
     width: 200px;
     padding: 5px;
@@ -189,16 +203,13 @@ label{
 //___________________________________________________________________
 .familyPicker{
     position: relative;
-    border: 2px solid;
-    padding: 4px 0 0 0;
-    .grid-wrapper{
-        max-height: 50vh;
-    }
+    margin-top: 6px;
+    @include common-border;
 }
 .familyPicker-reload{
     border: 0;
     position: absolute;
-    top: 7px;
+    top: 3px;
     right: 3px;
     z-index: 2;
     text-transform: uppercase;
@@ -252,6 +263,8 @@ label{
     margin: 2px 1px 0 1px;
 }
 .grid-wrapper{
+    // margin-top: 6px;
+    padding: 6px 0;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, auto));
     grid-gap: 4px;
@@ -452,13 +465,16 @@ textarea{
 }
 .FamilyList--main{
     border: 5px solid;
+    // @include common-border;
+    border-width: 5px;
+    border-radius: 12px;
     border-top: 0;
     padding: 0 !important;
     margin: 0;
     width: auto !important;
     overflow: auto;
-    display: grid;
-    grid-template-rows: repeat(auto-fill, 30px 1fr);
+    // display: grid;
+    // grid-template-rows: repeat(auto-fill, 30px 1fr);
 
 }
 .FamilyList--detail{
@@ -484,13 +500,15 @@ textarea{
     max-height: 300px;
     display: flex;
     flex-direction: column;
+    border-radius: 6px;
 }
 .imageBox__text{
     width: 100%;
-    margin: 4px 0;
     font-size: 12px;
-    padding: 4px;
-    border-top: 1px solid black;
+    padding: 6px;
+    button{
+        margin-top: 6px !important;
+    }
 }
 .serverFileUpdate-imageBox{
     margin: 0;
@@ -807,8 +825,27 @@ font-family: 'Times New Roman', Times, serif;
     right: 30px;
     overflow: visible;
 }
+.descriptionPreview--container{
+    border: 2px solid #b5b5b5;
+    padding: 3px;
+    border-radius: 6px;
+}
+.descriptionPreview--headline{
+    margin: 0;
+    padding: 5px;
+    border-bottom: 1px dotted black;
+}
+.descriptionPreview--content{
+    margin: 10px;
+}
 //MEDIA QUERY MOBILE *************************************************************************************************************
 @media only screen and (max-width: 720px) {
+    .admin-container{
+        padding: 5px;
+    }
+    .familyPicker-reload{
+        top: unset;
+    }
     .ServerFileUpdate-preview{
         width: 100%;
     }
@@ -915,6 +952,9 @@ font-family: 'Times New Roman', Times, serif;
         .FileInfo-preview{
             width: 100%;
         }
+    }
+    .FileInfo-preview{
+        border-right: 2px solid black;
     }
     .grid-wrapper{
         grid-template-columns: repeat(auto-fill, minmax(100px, 49%));
