--- a/client/src/css/components/_navigationInfo.scss
+++ b/client/src/css/components/_navigationInfo.scss
@@ -23,7 +23,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 15px 0 0 0;
+    padding: 15px 0;
     height: 100%;
     overflow-y: auto;
 }
