--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -36,9 +36,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   position: relative;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -46,6 +43,14 @@
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding: 5px 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 
 .imageInfo--box-displayMain {
@@ -121,7 +126,15 @@
 }
 
 .themes-list--selected:hover {
-  background-color: #fdd5c2 !important;
+  background-color: #fdd5c2;
+}
+
+.themes-list--selected:focus {
+  background-color: #c9eec9;
+}
+
+.themes-list:focus {
+  background-color: #f5fff5;
 }
 
 .themes-span {
@@ -381,7 +394,7 @@
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding: 15px 0 0 0;
+  padding: 15px 0;
   height: 100%;
   overflow-y: auto;
 }
@@ -484,6 +497,8 @@
 
 .draggable-container {
   border: 2px solid;
+  border-radius: 12px;
+  overflow: hidden;
   margin-bottom: 8px;
   background-color: #c2c2c2;
 }
@@ -531,7 +546,22 @@
 }
 
 .admin-content textarea, .admin-content input {
-  border: 1px solid blue;
+  border: 2px solid #b5b5b5;
+  padding: 3px;
+  border-radius: 6px;
+}
+
+.fileUploadMessage {
+  font-size: 14px;
+}
+
+.fail {
+  color: red;
+}
+
+.success {
+  color: #28a745;
+  font-weight: bold;
 }
 
 html, body, #root, .app-container, .admin-container {
@@ -657,7 +687,7 @@ form {
   border-top: 0;
   border-bottom: 0;
   padding: 0 5px;
-  overflow-y: hidden;
+  overflow: auto;
 }
 
 Button {
@@ -671,11 +701,6 @@ label {
 .FileUpload-container {
   height: 100%;
   overflow-y: auto;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: min-content 1fr;
-      grid-template-rows: -webkit-min-content 1fr;
-      grid-template-rows: min-content 1fr;
 }
 
 .FileInfo-container {
@@ -700,15 +725,16 @@ label {
 .SingleFile-container {
   height: initial;
   width: initial;
-  border: 1px solid;
   border-left: 0;
   border-right: 0;
-  padding: 5px;
-  margin-bottom: 10px;
+  border-bottom: 5px solid black;
+}
+
+.SingleFile-container:last-of-type {
+  border-bottom: 0;
 }
 
 .FileInfo-preview {
-  border-right: 1px solid #dee2e6;
   margin-right: 3px;
   width: 200px;
   padding: 5px;
@@ -736,18 +762,16 @@ label {
 
 .familyPicker {
   position: relative;
-  border: 2px solid;
-  padding: 4px 0 0 0;
-}
-
-.familyPicker .grid-wrapper {
-  max-height: 50vh;
+  margin-top: 6px;
+  border: 2px solid #b5b5b5;
+  padding: 3px;
+  border-radius: 6px;
 }
 
 .familyPicker-reload {
   border: 0;
   position: absolute;
-  top: 7px;
+  top: 3px;
   right: 3px;
   z-index: 2;
   text-transform: uppercase;
@@ -837,6 +861,7 @@ label {
 }
 
 .grid-wrapper {
+  padding: 6px 0;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(200px, auto))[auto-fill];
@@ -1126,15 +1151,13 @@ textarea {
 
 .FamilyList--main {
   border: 5px solid;
+  border-width: 5px;
+  border-radius: 12px;
   border-top: 0;
   padding: 0 !important;
   margin: 0;
   width: auto !important;
   overflow: auto;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: (30px 1fr)[auto-fill];
-      grid-template-rows: repeat(auto-fill, 30px 1fr);
 }
 
 .FamilyList--detail {
@@ -1178,14 +1201,17 @@ textarea {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  border-radius: 6px;
 }
 
 .imageBox__text {
   width: 100%;
-  margin: 4px 0;
   font-size: 12px;
-  padding: 4px;
-  border-top: 1px solid black;
+  padding: 6px;
+}
+
+.imageBox__text button {
+  margin-top: 6px !important;
 }
 
 .serverFileUpdate-imageBox {
@@ -1640,7 +1666,29 @@ h5 {
   overflow: visible;
 }
 
+.descriptionPreview--container {
+  border: 2px solid #b5b5b5;
+  padding: 3px;
+  border-radius: 6px;
+}
+
+.descriptionPreview--headline {
+  margin: 0;
+  padding: 5px;
+  border-bottom: 1px dotted black;
+}
+
+.descriptionPreview--content {
+  margin: 10px;
+}
+
 @media only screen and (max-width: 720px) {
+  .admin-container {
+    padding: 5px;
+  }
+  .familyPicker-reload {
+    top: unset;
+  }
   .ServerFileUpdate-preview {
     width: 100%;
   }
@@ -1769,6 +1817,9 @@ h5 {
   }
   .SingleFile-container .FileInfo-preview {
     width: 100%;
+  }
+  .FileInfo-preview {
+    border-right: 2px solid black;
   }
   .grid-wrapper {
     -ms-grid-columns: (minmax(100px, 49%))[auto-fill];
