--- a/client/src/css/components/_draggable.scss
+++ b/client/src/css/components/_draggable.scss
@@ -7,7 +7,8 @@
     border: 2px solid;
     border-radius: 12px;
     overflow: hidden;
-    margin-bottom: 8px;
+    // margin-bottom: 8px;
+    margin:0 8px 8px 4px;
     background-color: rgb(194, 194, 194);
 }
 .image-index-box{
