--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -1,359 +1,3 @@
-ul {
-  list-style: none;
-}
-
-.FilterTree-container {
-  height: 100%;
-  width: 300px;
-  overflow: visible;
-  z-index: 99;
-  background-color: white;
-  border-right: 0;
-  border-bottom: 0;
-  overflow-x: visible;
-}
-
-.FilterTree-container_main {
-  border: 1px solid black;
-  border-top: 0;
-  padding: 0 7px 12px 7px !important;
-}
-
-.FilterTree-wrapper {
-  margin: 8px !important;
-}
-
-.list-item:hover {
-  background-color: rgba(0, 0, 0, 0.07);
-}
-
-.FilterTree-list {
-  list-style: none;
-  padding: 0;
-  padding-left: 7px;
-  -webkit-transition: 0.2s all;
-  transition: 0.2s all;
-  overflow: hidden;
-  margin-bottom: 0;
-}
-
-.FilterTree-title_categories {
-  margin-left: 2px !important;
-}
-
-.FilterTree-form_categories .FilterTree-caret {
-  margin-right: 0 !important;
-}
-
-.FilterTree-list_closed {
-  border-bottom: 0 !important;
-  padding: 0 7px !important;
-  max-height: 0;
-}
-
-.FilterTree-subcategory_item {
-  padding: 0 0 5px 15px;
-  position: relative;
-  border-left: 1px solid;
-}
-
-.FilterTree-title {
-  position: relative;
-  margin-left: 28px;
-  cursor: pointer;
-}
-
-.FilterTree-title {
-  font-size: 14px;
-  width: 100%;
-}
-
-.list-item {
-  width: auto;
-}
-
-.title-letter {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.FilterTree-form {
-  position: relative;
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
-  -webkit-box-pack: justify !important;
-      -ms-flex-pack: justify !important;
-          justify-content: space-between !important;
-  border-bottom: 1px solid rgba(0, 0, 0, 0);
-}
-
-.FilterTree-form_category-title {
-  border: 1px solid black !important;
-  padding: 8px 0 8px 8px;
-  width: 100%;
-}
-
-.FilterTree-form:hover {
-  border-bottom: 1px dotted black;
-}
-
-.FilterTree-subcategories {
-  margin-top: 12px;
-}
-
-.FilterTree-item_listItem {
-  position: relative;
-  padding-left: 15px;
-  border-left: 1px solid;
-}
-
-.FilterTree-item_listItem::before,
-.FilterTree-subcategory_item::before {
-  content: "";
-  width: 16px;
-  height: 1px;
-  background-color: black;
-  position: absolute;
-  top: 12px;
-  left: 0;
-}
-
-.FilterTree-item_listItem:last-child,
-.FilterTree-subcategory_item:last-child {
-  border-left: 0;
-  padding-left: 16px;
-}
-
-.FilterTree-item_listItem:last-child::after,
-.FilterTree-subcategory_item:last-child::after {
-  content: "";
-  width: 1px;
-  height: 12px;
-  background-color: black;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-.FilterTree-item_listItem:first-child::after,
-.FilterTree-subcategory_item:first-child::after {
-  content: "";
-  width: 1px;
-  height: 18px;
-  background-color: black;
-  position: absolute;
-  left: -1px;
-  top: -5px;
-}
-
-.styledCheckbox-container {
-  display: block;
-  position: absolute;
-  cursor: pointer;
-  overflow: hidden;
-  height: 16px;
-  width: 16px;
-  top: 4px;
-}
-
-.styledCheckbox-checkbox {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-  right: 0;
-}
-
-.styleCheckbox-checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  border: solid black;
-  border-width: 1px;
-  background-color: #ffffff;
-}
-
-.styledCheckbox-container input:checked ~ .styleCheckbox-checkmark {
-  background-color: rgba(0, 0, 0, 0.07) !important;
-}
-
-.FilterTree-caret {
-  width: 24px;
-  height: 24px;
-  margin-right: 5px;
-  opacity: 0;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.FilterTree-form:hover .FilterTree-caret {
-  opacity: 0.1;
-}
-
-.FilterTree-caret:hover {
-  opacity: 0.3 !important;
-}
-
-.FilterTree-caret_down {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-}
-
-.clearAll-container {
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
-  -webkit-box-pack: justify !important;
-      -ms-flex-pack: justify !important;
-          justify-content: space-between !important;
-  border: 1px solid black;
-  margin: 8px 8px 0 8px;
-  cursor: pointer;
-}
-
-.dark-bg {
-  background-color: black;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.white-font {
-  color: white;
-  font-weight: bold;
-  white-space: nowrap;
-}
-
-.dark-bg:hover {
-  background-color: white;
-}
-
-.dark-bg:hover .white-font {
-  color: black;
-}
-
-.tagsMenu-list {
-  padding: 0 0 8px 8px !important;
-}
-
-.tags-item {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 45%;
-          flex: 1 1 45%;
-  cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  border: 1px solid black;
-  margin: 8px 8px 0 0;
-  padding: 4px;
-}
-
-.yearLocation-container {
-  border: 1px solid black;
-  margin: 12px 0;
-}
-
-.yearLocation-list {
-  margin: 0;
-  padding: 0;
-  padding-left: 8px;
-  font-size: 12px;
-  overflow: hidden;
-  border: 1px solid;
-  border-top: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.yearLocation-item:last-child {
-  margin-bottom: 8px;
-}
-
-.TagsMen-yearLocation-dropdown {
-  padding-top: 0;
-}
-
-.FilterTree-container-buttons {
-  overflow-y: scroll;
-  height: 100%;
-}
-
-.hamburger {
-  position: absolute;
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
-  background-color: white;
-  height: 50px;
-  width: 51px;
-  right: -52px;
-  padding: 5px;
-}
-
-.hamburger img {
-  height: 100%;
-  width: 100%;
-}
-
-.hamburger-open {
-  padding: 8px;
-}
-
-.hamburger-open img {
-  -webkit-transform: scale(0.4);
-          transform: scale(0.4);
-}
-
-.show-menu .hamburger {
-  right: -51px;
-}
-
-@media only screen and (max-width: 720px) {
-  .FilterTree-wrapper {
-    margin: 4px !important;
-  }
-  .FilterTree-container {
-    position: absolute;
-    height: 100%;
-    width: calc(100% - 50px);
-    -webkit-transform: translateX(-100%);
-            transform: translateX(-100%);
-    -webkit-transition: -webkit-transform 0.2s !important;
-    transition: -webkit-transform 0.2s !important;
-    transition: transform 0.2s !important;
-    transition: transform 0.2s, -webkit-transform 0.2s !important;
-    border: 0;
-    -ms-grid-row: 2;
-        grid-row-start: 2;
-    grid-row-end: 3;
-  }
-  .show-menu {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
-  .FilterTree-caret {
-    opacity: 0.5;
-  }
-}
-
 * {
   padding: 0;
   margin: 0;
@@ -426,6 +70,11 @@ ul {
 
 button {
   background-color: white;
+}
+
+.frontEndIndex-container button, label {
+  font-family: 'Times New Roman', Times, serif !important;
+  text-transform: uppercase;
 }
 
 body {
@@ -684,8 +333,6 @@ label {
 .frontEndIndex-container {
   height: 100%;
   width: 100%;
-  display: -ms-grid;
-  display: grid;
   -ms-grid-columns: min-content 1fr;
       grid-template-columns: -webkit-min-content 1fr;
       grid-template-columns: min-content 1fr;
@@ -694,7 +341,10 @@ label {
 }
 
 .imageSelect-container {
-  height: 100%;
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  grid-column-end: 3;
+  max-height: 100%;
   width: 100%;
   overflow-x: hidden;
   background-color: white;
@@ -704,10 +354,14 @@ label {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  position: absolute;
-  border-left: 1px solid black;
   -webkit-transform: translateX(0);
           transform: translateX(0);
+}
+
+.imageSelect-buffer {
+  height: 100%;
+  width: 100%;
+  background-color: white;
 }
 
 .Nav-button {
@@ -757,6 +411,11 @@ label {
   position: relative;
   width: 100%;
   height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: min-content 1fr;
+      grid-template-columns: -webkit-min-content 1fr;
+      grid-template-columns: min-content 1fr;
 }
 
 .FilePreview--imageContainer {
@@ -785,6 +444,7 @@ label {
           flex: 1 1 19%;
   min-width: 59px;
   max-height: 200px;
+  border-top: 9px solid red;
 }
 
 .FilePreview--imageContainer__empty {
@@ -794,6 +454,8 @@ label {
   top: 0;
   z-index: -9999;
   height: 0;
+  border-top: 4px solid red;
+  border-bottom: 5px solid red;
 }
 
 .FilePreview--imageContainer__empty > * {
@@ -853,7 +515,7 @@ label {
   -webkit-transform: translateY(0);
           transform: translateY(0);
   cursor: pointer;
-  height: 100%;
+  max-height: 100%;
   width: 100%;
 }
 
@@ -1021,16 +683,6 @@ label {
   font-size: 12px;
   font-weight: 600;
   white-space: nowrap;
-}
-
-.full-height {
-  height: 100% !important;
-}
-
-.show-menu-desktop {
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
-  width: 0;
 }
 
 .enlarge-preview {
@@ -1797,11 +1449,8 @@ label {
     font-size: 12px;
   }
   .images-container {
-    position: absolute;
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 100%;
-        grid-template-columns: 100%;
     -ms-grid-rows: min-content 1fr;
         grid-template-rows: -webkit-min-content 1fr;
         grid-template-rows: min-content 1fr;
@@ -1811,16 +1460,12 @@ label {
     grid-row-end: 3;
   }
   .imageSelect-container {
-    -ms-grid-column: 1;
-        grid-column-start: 1;
-    grid-column-end: 2;
     bottom: 0;
     z-index: 999;
     width: 100% !important;
     border-right: none;
     border-left: none;
     border-top: none;
-    height: 100%;
     z-index: 0;
   }
   .imageSelect-slide {
@@ -1841,12 +1486,17 @@ label {
     border-top: 1px solid black;
     left: 0;
   }
+  .side-scroll * {
+    border: 0;
+  }
+  .side-scroll .imageSelect-buffer {
+    display: none;
+  }
   .side-scroll img {
     height: 100%;
   }
   .explorer-view {
     right: 0;
-    width: calc(100% - 220px) !important;
   }
   .enlarge-info {
     display: -webkit-box;
@@ -2035,6 +1685,7 @@ label {
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   right: 0;
+  top: 0;
   background-color: white;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -2052,6 +1703,7 @@ label {
   z-index: 99;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
+  width: 100% !important;
 }
 
 .enlarge-bar {
@@ -2241,10 +1893,26 @@ label {
 }
 
 .FilterTree-container {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 2;
+  top: 30px;
+  overflow: hidden;
+  height: 100%;
+  width: 0;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 14px;
-  width: 170px;
-  position: relative;
+  background-color: white;
+  border-right: 1px solid black;
+}
+
+.FilterTree-wrapper {
+  width: 320px;
+}
+
+.show-menu {
+  border-right: 1px solid black;
+  width: 320px;
 }
 
 .legacyStyle-List-listItem {
@@ -2271,7 +1939,7 @@ label {
 }
 
 .MobileNav-container {
-  position: relative;
+  z-index: 1;
   height: 30px;
   width: 100%;
   display: -webkit-box;
@@ -2355,9 +2023,15 @@ label {
 
 @media only screen and (max-width: 720px) {
   .FilterTree-container {
-    width: 220px;
     font-size: 16px;
     border-right: 1px solid black;
+  }
+  .FilterTree-wrapper {
+    padding: 6px;
+    width: 220px;
+  }
+  .show-menu {
+    width: 220px;
   }
 }
 
